<resources>
    <string name="app_name">Depot Houston</string>

    <string name="exception_message_no_connection">No network connection available - try again later</string>
    <string name="exception_message_stop_not_found">Error - stop not found.</string>
    <string name="exception_message_generic">Error</string>
    <string name="error_invalid_user_location_tap_feature_remains">There was an error getting your location. You can still tap anywhere on the map to see stops.</string>
    <string name="title_activity_main">Depot - Houston</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btn_text_retry">Retry</string>
    <string name="title_activity_stop_list">Stops</string>
    <string name="title_activity_route_list">Routes</string>
    <string name="title_activity_arrival_list">Arrivals</string>

    <string name="nav_route_list">Route List</string>
    <string name="nav_map_search">Map Search</string>
    <string name="nav_saved_stops">Saved Stops</string>
    <string name="nav_recent_stops">Recent Stops</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_feedback">Submit Feedback</string>

    <string name="arriving">Arriving</string>
    <string name="destination">Destination</string>
    <string name="route">Route</string>
    <string name="depot_capitalized">DEPOT</string>
    <string name="title_activity_map_search">MapSearchActivity</string>
    <string name="title_activity_maps">Map Search</string>
    <string name="location_permission_rationale_nearby_stops">Depot needs your location to show you nearby stops</string>
    <string name="OK">OK</string>
    <string name="enable_location_permission_to_see_nearby_stops"><![CDATA[Enable the location permission to view nearby stops (go to Settings -> Apps)]]></string>
    <string name="enable_location_permission_to_see_nearby_routes"><![CDATA[Enable the location permission to view nearby routes (go to Settings -> Apps)]]></string>
    <string name="no_nearby_stops">No nearby stops</string>
    <string name="tap_to_see_nearby_stops">Tap any location to see nearby stops</string>
    <string name="your_location">Your location</string>
    <string name="title_activity_saved_stops">Saved Stops</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_create_group">Create Group</string>
    <string name="create_new_group">Create new group</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="saved_group_name_examples">Examples: Work, Home, Weekend, etc.</string>
    <string name="something_went_wrong_try_again">Oops - something went wrong!\nPlease tap to try again.</string>
    <string name="save">Save</string>
    <string name="save_stop_to_group">Save stop to group</string>
    <string name="remove">Remove</string>
    <string name="title_activity_recent_stops">Recent Stops</string>
    <string name="no_recent_stops">No recent stops to show</string>
    <string name="action_my_location">My Location</string>
    <string name="nearby_only">Nearby Only</string>
    <string name="location_permission_rationale_nearby_routes">Depot needs your location to show you nearby routes</string>
    <string name="no_nearby_routes_with_tips">No nearby routes\n\nChange the distance threshold in the settings menu or use the toggle above to show all routes</string>
    <string name="no_nearby_stops_with_tips">No nearby stops\n\nChange the distance threshold in the settings menu or use the toggle above to show all stops for this route</string>
    <string name="error_invalid_user_location_showing_all_routes">There was an error getting your location - showing all routes instead</string>
    <string name="error_invalid_user_location_showing_all_stops">There was an error getting your location - showing all stops instead</string>
    <string name="error_loading_nearby_stops">Error loading nearby stops - please go back and try again</string>
    <string name="clear_recent_stops">Clear recent stops</string>
    <string name="clear_stops_are_you_sure">Are you sure you want to clear all recently viewed stops?</string>
    <string name="action_clear_recent_stops">Clear recent stops</string>
    <string name="enable_active_tracking">Enable Active Tracking</string>
    <string name="vibrate_my_device">Vibrate my device</string>
    <string name="play_a_notification_sound">Play a notification sound</string>
    <string name="active_tracking_disclaimer">If for some reason the Houston Metro data feed skips the minute that you\'ve selected above, your device may not alert you.</string>
    <string name="enable">Enable</string>
    <string name="loading_routes">Loading routes...</string>
    <string name="error_loading_routes_try_again">Error loading routes - please try again in a moment</string>
    <string name="stop_saved_to_favorites">This stop has been saved to your favorites!</string>
    <string name="active_tracking_service_label">Depot Houston Active Tracking</string>
    <string name="select_a_duration">Select a duration:</string>
    <string name="departure_alarm_header">Departure Alarm (Optional)</string>
    <string name="select_a_route">Select a route:</string>
    <string name="whenever_a_vehicle_is">Whenever a vehicle is</string>
    <string name="minutes_away">minutes away:</string>
    <string name="no_upcoming_arrivals">No upcoming arrivals</string>
    <string name="title_activity_widget_configuration">WidgetConfigurationActivity</string>
    <string name="widget_arrival_default">--</string>
    <string name="widget_refresh_hint">Tap the widget to update arrivals.</string>
    <string name="title_activity_widget_configuration1x1">Configure 1x1 Widget</string>
    <string name="title_activity_widget_configuration2x1">Configure 2x1 Widget</string>
    <string name="step_one">Step 1</string>
    <string name="configure_widget_step_1_description">Select a route</string>
    <string name="step_two">Step 2</string>
    <string name="configure_widget_step_2_description">Select a direction</string>
    <string name="step_three">Step 3</string>
    <string name="configure_widget_step_3_description">Select a stop</string>
    <string name="step_four">Step 4</string>
    <string name="configure_widget_step_4_description">Customize your widget</string>
    <string name="set_a_title">Set a title</string>
    <string name="select_a_background_color">Select a background color</string>
    <string name="widget_preview">Widget Preview</string>
    <string name="start_over">Start Over</string>
    <string name="okay">Okay</string>
    <string name="changelog">Changelog</string>
    <string name="all_data_comes_from_houston_metro">All data comes directly from the Houston Metro.</string>
    <string name="contact_email">depotandroidapp@gmail.com</string>
    <string name="developer_name">Tamer Barsbay</string>
    <string name="contact_the_developer_of_depot">Contact the developer of Depot</string>
</resources>
