<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/layout_enable_active_tracking"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingRight="16dp"
              android:paddingTop="8dp"
              android:paddingBottom="8dp"
              android:background="@color/primary"
              android:elevation="4dp"
              android:visibility="gone">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable_active_tracking"
        android:textStyle="bold"
        android:textSize="16sp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:textColor="@color/text_primary_light"
        android:background="@color/primary_dark"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_a_route"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                android:textStyle="bold"
                android:textColor="@color/yellow_500"/>

            <Spinner
                android:id="@+id/sp_active_tracking_routes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/tv_active_tracking_routes_loading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loading_routes"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                android:textColor="@color/text_primary_light"
                android:visibility="visible"/>

            <TextView
                android:id="@+id/tv_active_tracking_routes_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/error_loading_routes_try_again"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                android:textStyle="bold"
                android:textColor="@color/orange_400"
                android:visibility="gone"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_a_duration"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                android:textStyle="bold"
                android:textColor="@color/yellow_500"/>

            <Spinner
                android:id="@+id/sp_active_tracking_duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/list_item_simple_white"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/departure_alarm_header"
        android:textStyle="bold"
        android:textSize="16sp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:textColor="@color/text_primary_light"
        android:background="@color/primary_dark"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/whenever_a_vehicle_is"
            android:paddingLeft="16dp"
            android:paddingTop="8dp"
            android:textStyle="bold"
            android:textColor="@color/yellow_500"/>

        <Spinner
            android:id="@+id/sp_active_tracking_vehicle_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:listitem="@layout/list_item_simple_white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minutes_away"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:textStyle="bold"
            android:textColor="@color/yellow_500"/>

    </LinearLayout>

    <CheckBox
        android:id="@+id/cb_active_tracking_enable_vibrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textColor="@color/text_primary_light"
        android:text="@string/vibrate_my_device"/>

    <CheckBox
        android:id="@+id/cb_active_tracking_enable_ring"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textColor="@color/text_primary_light"
        android:text="@string/play_a_notification_sound"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:textColor="@color/text_primary_light"
        android:textSize="12sp"
        android:text="@string/active_tracking_disclaimer"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <Button
            style="@style/SavedStops.DialogButton"
            android:id="@+id/btn_active_tracking_cancel"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:layout_marginRight="8dp"/>

        <Button
            style="@style/SavedStops.DialogButton"
            android:id="@+id/btn_active_tracking_enable"
            android:text="@string/enable"
            android:textColor="@color/white"/>

    </LinearLayout>

</LinearLayout>