<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="24dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingBottom="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_group"
        android:textStyle="bold"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_new_group_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter a group name..."
        android:maxLength="25"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saved_group_name_examples"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/tv_new_group_duplicate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="A group by that name already exists!"
        android:textColor="@color/red_500"
        android:textStyle="bold"
        android:padding="16dp"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right"
        android:paddingTop="8dp">

        <Button
            style="@style/SavedStops.DialogButton"
            android:id="@+id/btn_cancel"
            android:text="@string/cancel"
            android:layout_marginRight="8dp"/>

        <Button
            style="@style/SavedStops.DialogButton"
            android:id="@+id/btn_create"
            android:text="@string/create"
            android:textColor="@color/button_text"
            android:enabled="false"/>

    </LinearLayout>

</LinearLayout>