<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:gravity="center_horizontal">

    <ImageView
        android:id="@+id/dialog_about_icon"
        android:src="@mipmap/app_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/primary"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:paddingTop="16dp" />

    <TextView
        android:id="@+id/tv_about_dialog_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="DEVELOPER"
        android:textSize="14sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/primary_dark"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/developer_name"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CONTACT"
        android:textSize="14sp"
        android:layout_marginTop="16dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/primary_dark"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp" />

    <TextView
        android:id="@+id/tv_about_dialog_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_email"
        android:textSize="18sp"
        android:textColor="@color/primary_dark" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_data_comes_from_houston_metro"
        android:textSize="14sp"
        android:layout_margin="20dp" />


</LinearLayout>
