<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_save_stop"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingRight="16dp"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:background="@color/primary"
    android:elevation="4dp"
    android:visibility="gone">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_stop_to_group"
        android:textStyle="bold"
        android:textSize="16sp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:textColor="@color/text_primary_light"
        android:background="@color/primary_dark"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:paddingTop="4dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_label"
            android:tint="@color/white"
            android:layout_marginRight="16dp"/>

        <Spinner
            android:id="@+id/sp_save_stop_groups"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_save_stop_new_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:visibility="gone"
        android:paddingLeft="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_circle"
            android:tint="@color/white"
            android:layout_marginRight="16dp"/>

        <EditText
            android:id="@+id/et_save_stop_new_group_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="Enter a name..."/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right">

        <Button
            style="@style/SavedStops.DialogButton"
            android:id="@+id/btn_save_stop_cancel"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:layout_marginRight="8dp"/>

        <Button
            style="@style/SavedStops.DialogButton"
            android:id="@+id/btn_save_stop_save"
            android:text="@string/save"
            android:textColor="@color/enable_dependent_white"/>

    </LinearLayout>

</LinearLayout>